# Hybrid_Astar_with_Ackermann

./: .gitignore  README.md  hawa_cfg.json
src/auxiliary_tools/: CMakeLists.txt  package.xml
src/auxiliary_tools/include/computer_load/: class_pc_load.h
src/auxiliary_tools/src/: node_pc_load.cpp
src/car_basics/: CMakeLists.txt  package.xml
src/car_basics/include/: wheeltec_robot.h
src/car_basics/launch/: mini_akm_basic.launch
src/car_basics/urdf/: mini_akm_robot.urdf
src/car_localization/: CMakeLists.txt  package.xml
src/car_localization/launch/: cartographer_slam.launch
src/car_localization/saved_maps/: mymap.pgm
src/car_pathplan/: CMakeLists.txt  package.xml
src/car_pathplan/include/car_pathplan/: class_corridor.h  class_custom_path.h  class_gridmap_handler.h  struct_simple_pose.h
src/car_pathplan/include/hybrid_a_star_module/: bresenham.h  class_astar.h  enum_fail_reasons.h
src/car_pathplan/include/map_fusion/: class_inflation_samples.h  class_map_fusion.h
src/car_pathplan/include/numerical_optimization_curve/: class_bounded_curve_solver.h  class_corridor_generator.h  class_path_solver copy 2.h  class_path_solver copy.h  class_raw_path_sampler.h  class_try_5.h  dynamics_model_formula.h  helper_functions.h  helper_state_indices.h
src/car_pathplan/include/planner/: class_path_planner.h  class_path_validator.h  conversion_tools.h
src/car_pathplan/launch/: pp.launch
src/car_pathplan/src/: map_fusion_node.cpp
src/car_pathplan/src/test_env_tools/: environment.launch  gridmap_pub_and_akm_sim.launch  gridmap_publish.py
src/hawa_ackermann_sim/: CMakeLists.txt  package.xml
src/hawa_ackermann_sim/include/hawa_ackermann_sim/: class_akm_sim_dynamic_states.h  class_car_body_box_marker.h  class_node_ackermann_simulation.h  class_random_double_generator.h  class_random_sin_noise_generator.h  hawa_sim_tools.h
src/hawa_ackermann_sim/launch/: akm_sim_and_joystick.launch
src/hawa_ackermann_sim/src/: class_akm_sim_dynamic_states.cpp  class_car_body_box_marker.cpp  class_node_ackermann_simulation.cpp  class_random_sin_noise_generator.cpp  frames_2024-03-27_21.08.18.gv  hawa_sim_tools.cpp  joystick_to_ackermannDriveStamped.py  keyboard_to_ackermannDriveStamped.py  simulation.cpp  topdown_sim.rviz
src/hawa_ackermann_sim/src/py_scripts/: joystick_to_ackermannDriveStamped.py  keyboard_to_ackermannDriveStamped.py
src/hawa_ackermann_sim/urdf/: mini_akm_model.urdf
src/hawa_ackermann_sim_control/: CMakeLists.txt  package.xml
src/hawa_ackermann_sim_control/include/car_control/: class_elemental_path2d.h  class_elemental_pose2d.h  class_module_path_segmenter.h  class_ros_path_to_custom_path_convertor.h
src/hawa_ackermann_sim_control/include/stanley/: class_stanley_controller.h
src/hawa_ackermann_sim_control/src/test/: path_publisher.py
src/hawa_control/: CMakeLists.txt  Doxygen.config  package.xml
src/hawa_control/doxygen_folder/html/: CMakeLists_8txt.html  annotated.html  classClassHawaMultiSegmentManager-members.html  classClassHawaMultiSegmentManager.html  classClassHawaMultiSegmentManager__coll__graph.map  classClassHawaMultiSegmentManager__coll__graph.md5  classClassNodePurePursuit-members.html  classClassNodePurePursuit.html  classClassNodePurePursuit__coll__graph.map  classClassNodePurePursuit__coll__graph.md5  classClassPath2D-members.html  classClassPath2D.html  classClassPath2DSegment-members.html  classClassPath2DSegment.html  classClassPath2DSegment__coll__graph.map  classClassPath2D__coll__graph.map  classClassPath2D__coll__graph.md5  classClassPose2D-members.html  classClassPose2D.html  classClassPose2D__coll__graph.md5  classClassPurePursuit-members.html  classClassPurePursuit.html  classClassPurePursuit__coll__graph.map  classClassPurePursuit__coll__graph.md5  class__elemental__path2d_8h.html  class__elemental__path2d_8h__incl.map  class__elemental__path2d_8h__incl.md5  class__elemental__path2d_8h_source.html  class__elemental__path2d__segment_8h.html  class__elemental__path2d__segment_8h__dep__incl.map  class__elemental__path2d__segment_8h__dep__incl.md5  class__elemental__path2d__segment_8h__incl.map  class__elemental__path2d__segment_8h__incl.md5  class__elemental__path2d__segment_8h_source.html  class__elemental__pose2d_8h.html  class__elemental__pose2d_8h__dep__incl.map  class__elemental__pose2d_8h__dep__incl.md5  class__elemental__pose2d_8h_source.html  class__multi__segment__manager_8h.html  class__multi__segment__manager_8h__dep__incl.map  (+70 more)
src/hawa_control/doxygen_folder/latex/: CMakeLists_8txt.tex  annotated.tex  classClassHawaMultiSegmentManager.tex  classClassNodePurePursuit.tex  classClassPath2D.tex  classClassPath2DSegment.tex  classClassPath2DSegment__coll__graph.md5  classClassPose2D.tex  classClassPurePursuit.tex  class__elemental__path2d_8h.tex  class__purepursuit_8h.tex  (+40 more)
src/hawa_control/src/: node_lqr.cpp  node_purepursuit.cpp
src/hawa_map_fusion/: CMakeLists.txt  package.xml
src/hawa_map_fusion/include/: class_inflation_samples.h  class_map_fusion.h  class_tool_general.h  class_tool_timer.h
src/hawa_map_fusion/src/: class_inflation_samples.cpp  class_map_fusion.cpp  class_tool_general.cpp  class_tool_timer.cpp  node_map_fusion.cpp
src/hawa_pathplan/: CMakeLists.txt  Doxygen.config  package.xml
src/hawa_pathplan/cfg/: global_planner_cfg.json  hybrid_astar_cfg.json  local_planner_cfg.json
src/hawa_pathplan/include/: class_custom_path_container.h  class_gridmap_handler.h  class_hybrid_astar.h  class_node_path_planner.h  class_path_validator.h  class_reedsshepp_solver.h  common_includes.h  custom_data_types.h  hybrid_astar_tools.h  reedsshepp_tools.h  struct_motion_primitives.h
src/hawa_pathplan/launch/: demo.xml  gridmap_pub_and_akm_sim.launch  hawa_demo_manual_target.launch  launch_hawa_demo_manual_target.py  rviz_config_for_demo.rviz
src/hawa_pathplan/src/: astar_node_test.cpp  class_custom_path_container.cpp  class_gridmap_handler.cpp  class_hybrid_astar.cpp  class_node_path_planner.cpp  class_path_validator.cpp  class_reedsshepp_solver.cpp  map_fusion_node.cpp  node_path_plan.cpp  path_plan_node.cpp
(+838 files in other folders)
