<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hawa_pathplan</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jf@todo.todo">jf</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>hawa_control</exec_depend>
  <exec_depend>hawa_ackermann_sim</exec_depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
